добавили шапку сайту

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,1 +1,12 @@
+@import "vars"
+@import "mixins"
+@import "interface"
 @import "fonts"
+@import "normalize"
+@import "header"
+
+
+
+body
+  font-family: "Museo Sans Light", sans-serif
+  color: $font-color
