Добавили главную часть

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,9 +4,17 @@
 @import "fonts"
 @import "normalize"
 @import "header"
+@import "main"
 
 
 
 body
   font-family: "Museo Sans Light", sans-serif
   color: $font-color
+.container
+  width: 1170px
+  margin: 0 auto  
+img 
+  max-width: 100%
+h1
+  margin: 0
