--- a/css/style.css
+++ b/css/style.css
@@ -384,8 +384,6 @@ template {
 }
 
 .header-container {
-  width: 1170px;
-  margin: 0 auto;
   padding: 8px 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -424,8 +422,104 @@ template {
   color: #333333;
 }
 
+.main {
+  background-color: #f5f5f5;
+}
+
+.main-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.main-text {
+  margin-top: 79px;
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+}
+
+.main-text__title {
+  font-size: 41px;
+  line-height: 55px;
+  font-family: "Museo Sans Bold", sans-serif;
+}
+
+.main-text__add {
+  margin-top: 20px;
+  display: block;
+  font-size: 20px;
+}
+
+.main-advantages {
+  margin-top: 52px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 350px;
+}
+
+.main-advantages__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 28px;
+}
+
+.main-advantages__text {
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.main-advantages__img {
+  min-width: 38px;
+  height: 38px;
+  margin-right: 30px;
+  border: 2px solid #ffd200;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.main-advantages__img-1 {
+  background-image: url("../img/main/clock.png");
+}
+
+.main-advantages__img-2 {
+  background-image: url("../img/main/calculator.png");
+}
+
+.main-advantages__img-3 {
+  background-image: url("../img/main/paint-board.png");
+}
+
+.main-img {
+  margin-top: 60px;
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+}
+
 body {
   font-family: "Museo Sans Light", sans-serif;
   color: #333333;
+}
+
+.container {
+  width: 1170px;
+  margin: 0 auto;
+}
+
+img {
+  max-width: 100%;
+}
+
+h1 {
+  margin: 0;
 }
 /*# sourceMappingURL=style.css.map */
