--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -10,3 +10,11 @@
     background-color: lighten($primary-color, 10%)
   &:focus
     outline: none
+.input
+  width: 270px
+  margin-top: 49px
+  padding: 20px 0 20px 26px
+  border-radius: 10px
+  border: 1px solid #dddddd
+  &:focus
+    outline: none
