--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,15 +5,17 @@
 @import "normalize"
 @import "header"
 @import "main"
+@import "feedback"
 
-
+*, *:after, *:before
+  box-sizing: border-box
 
 body
   font-family: "Museo Sans Light", sans-serif
   color: $font-color
 .container
   width: 1170px
-  margin: 0 auto  
+  margin: auto  
 img 
   max-width: 100%
 h1
