--- a/sass/_feedback.sass
+++ b/sass/_feedback.sass
@@ -1,13 +1,20 @@
 .feedback
-  background:
-    image: url("../img/feedback/feedback.jpg")
-    repeat: no-repeat
-    size: 44%
-    position: right
   padding-top: 94px
-  height: 595px
+  background: url("../img/feedback/feedback.jpg") no-repeat center left 700px
+  background-size: contain
+  position: relative
+  z-index: 1
+  &:before
+    content: ''
+    left: 0
+    top: 0
+    width: 57%
+    height: 100%
+    background-color: #ffffff
+    position: absolute
+    z-index: -1
 .form
-  max-width: 575px
+  max-width: 570px
   &__title
     font-size: 24px
     line-height: 35px
@@ -55,6 +62,5 @@
         height: 38px
         border: 2px solid $phone-color
         border-radius: 50%
-        
 
 
