--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,1 +1,178 @@
-@media (max-width: 1199px)
+@media (max-width: 1200px)
+  .container
+    width: 970px
+  .feedback
+    &:before
+      width: 65%
+@media (max-width: 992px)
+  .container
+    width: 750px
+  .main
+    &-wrap 
+      flex-direction: column
+      margin: auto
+    &-text 
+      &__title
+        text-align: center
+  .feedback
+    background: #ffffff
+  .form
+    margin: auto
+@media (max-width: 768px)
+  .container
+    width: 600px
+  .header-button_text-hide
+    display: none
+  .main
+    &-text 
+      &__title
+        font-size: 35px
+      &__add
+        font-size: 18px
+  .form
+    &__title, &__subtitle
+      text-align: center
+@media (max-width: 576px)
+  .container
+    width: 470px
+  .header
+    height: 67px
+    &-container
+      padding: 4px 0
+    img 
+      height: 60px
+    &-text 
+      &__contacts
+        &_tel
+          font-size: 16px
+  .button
+    padding: 14px 25px 14px 25px
+  .main
+    &-text
+      margin: auto
+      margin-top: 40px
+      width: 400px
+      &__title 
+        font-size: 30px
+        line-height: 30px
+    &-advantages
+      margin: auto
+      margin-top: 25px
+      &__item
+        margin-bottom: 20px
+    &-img
+      margin-top: 30px
+  .feedback
+    padding: 40px 0
+  .form
+    &__title
+      margin-bottom: 15px
+      font-size: 19px
+      line-height: 30px
+    &__subtitle
+      margin-bottom: 20px  
+      font-size: 15px
+    &-button 
+      margin-bottom: 15px
+    &-call
+      &_text
+        width: 190px
+        font-size: 13px
+        line-height: 20px
+      &_phone
+        &-text
+          margin-right: 0
+          width: 180px
+          font-size: 13px
+          line-height: 20px
+        &:before
+          margin-right: 11px
+          margin-top: 2px
+          width: 33px
+          height: 33px
+  .input
+    width: 218px
+    margin-bottom: 22px
+    padding: 15px 0 15px 25px
+    border-radius: 7px
+@media (max-width: 320px)
+  .container
+    width: 290px
+  .header
+    height: 50px
+    &-container
+      padding: 2px 0
+    img 
+      height: 45px
+    &-text 
+      &__contacts
+        margin-right: 10px
+        &_geo
+          font-size: 9px
+          margin-bottom: 0
+        &_tel
+          font-size: 10px
+  .button
+    padding: 9px 15px 9px 15px
+    font-size: 9px
+    border-radius: 7px
+  .main
+    &-text
+      margin: auto
+      margin-top: 20px
+      width: 290px
+      &__title 
+        font-size: 23px
+        line-height: 30px
+      &__add
+        margin-top: 15px
+        font-size: 16px
+    &-advantages
+      margin: auto
+      margin-top: 25px
+      &__item
+        margin-bottom: 20px
+      &__text
+        font-size: 12px
+      &__img
+        min-width: 34px
+        height: 34px
+        margin-right: 15px
+    &-img
+      margin-top: 30px
+  .feedback
+    padding: 22px 0
+  .form
+    &__title
+      margin-bottom: 13px
+      font-size: 15px
+      line-height: 24px
+      &-low
+        text-transform: lowercase
+    &__subtitle
+      margin-bottom: 20px  
+      font-size: 12px
+      line-height: 20px
+    &-button 
+      margin-bottom: 15px
+      font-size: 12px
+    &-call 
+      &_text
+        width: 130px
+        font-size: 10px
+        line-height: 20px
+      &_phone
+        &-text
+          margin-right: 0
+          width: 130px
+          font-size: 10px
+          line-height: 20px
+        &-number
+          font-size: 14px
+        &:before
+          display: none
+  .input
+    width: 100%
+    margin-bottom: 10px
+    padding: 10px 0 10px 25px
+    border-radius: 7px
