--- a/sass/style.sass
+++ b/sass/style.sass
@@ -13,6 +13,7 @@
 body
   font-family: "Museo Sans Light", sans-serif
   color: $font-color
+  overflow-x: hidden
 .container
   width: 1170px
   margin: auto  
