--- a/css/style.css
+++ b/css/style.css
@@ -516,6 +516,15 @@ template {
       flex-basis: 50%;
 }
 
+.main img {
+  -webkit-transform-origin: top left;
+          transform-origin: top left;
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+  z-index: 2;
+  position: relative;
+}
+
 .feedback {
   padding-top: 86px;
   padding-bottom: 90px;
@@ -629,6 +638,7 @@ template {
 body {
   font-family: "Museo Sans Light", sans-serif;
   color: #333333;
+  overflow-x: hidden;
 }
 
 .container {
@@ -647,6 +657,14 @@ h1 {
 @media (max-width: 1200px) {
   .container {
     width: 970px;
+  }
+  .main img {
+    -webkit-transform-origin: top left;
+            transform-origin: top left;
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+    z-index: 2;
+    position: relative;
   }
   .feedback:before {
     width: 65%;
@@ -667,6 +685,10 @@ h1 {
   .main-text__title {
     text-align: center;
   }
+  .main img {
+    -webkit-transform: none;
+            transform: none;
+  }
   .feedback {
     background: #ffffff;
   }
@@ -677,10 +699,13 @@ h1 {
 
 @media (max-width: 768px) {
   .container {
-    width: 600px;
+    width: 579px;
   }
   .header-button_text-hide {
     display: none;
+  }
+  .main-text {
+    margin-top: 40px;
   }
   .main-text__title {
     font-size: 35px;
@@ -688,8 +713,21 @@ h1 {
   .main-text__add {
     font-size: 18px;
   }
+  .main-advantages {
+    margin: auto;
+    margin-top: 20px;
+  }
+  .main-advantages__item {
+    margin-bottom: 20px;
+  }
+  .main-img {
+    margin-top: 30px;
+  }
   .form__title, .form__subtitle {
     text-align: center;
+  }
+  .feedback {
+    padding: 38px 0;
   }
 }
 
@@ -802,7 +840,7 @@ h1 {
   .main-text {
     margin: auto;
     margin-top: 20px;
-    width: 290px;
+    width: 280px;
   }
   .main-text__title {
     font-size: 23px;
@@ -850,15 +888,22 @@ h1 {
     margin-bottom: 15px;
     font-size: 12px;
   }
+  .form-call {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
   .form-call_text {
-    width: 130px;
-    font-size: 10px;
+    width: 100%;
+    font-size: 11px;
     line-height: 20px;
   }
   .form-call_phone-text {
-    margin-right: 0;
-    width: 130px;
-    font-size: 10px;
+    margin: auto;
+    width: 150px;
+    font-size: 11px;
     line-height: 20px;
   }
   .form-call_phone-number {
@@ -868,10 +913,14 @@ h1 {
     display: none;
   }
   .input {
-    width: 100%;
+    margin-right: 0;
+    width: 287px;
+    padding: 6px 0;
     margin-bottom: 10px;
-    padding: 10px 0 10px 25px;
     border-radius: 7px;
+  }
+  .input::-webkit-input-placeholder {
+    text-align: center;
   }
 }
 /*# sourceMappingURL=style.css.map */
