--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -42,6 +42,11 @@
   &-img
     margin-top: 60px
     flex-basis: 50%
+  img 
+    transform-origin: top left
+    transform: scale(1.3)
+    z-index: 2
+    position: relative
 
     
 
