--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -4,7 +4,7 @@
   .main
     img
       transform-origin: top left
-      transform: scale(1.2)
+      transform: scale(1.1)
       z-index: 2
       position: relative
   .feedback
@@ -12,7 +12,7 @@
       width: 65%
 @media (max-width: 992px)
   .container
-    width: 750px
+    width: 730px
   .main
     &-wrap 
       flex-direction: column
@@ -27,8 +27,11 @@
   .form
     margin: auto
 @media (max-width: 768px)
+  .header
+    margin: auto
+    width: 100%
   .container
-    width: 579px
+    width: 570px
   .header-button_text-hide
     display: none
   .main
@@ -48,8 +51,15 @@
   .form
     &__title, &__subtitle
       text-align: center
+    &-button 
+      width: 558px
   .feedback
     padding: 38px 0
+  .input
+    width: 262px
+    padding: 20px 0 20px 27px
+    border-radius: 10px
+    border: 1px solid #dddddd
 @media (max-width: 576px)
   .container
     width: 470px
@@ -91,6 +101,7 @@
       margin-bottom: 20px  
       font-size: 15px
     &-button 
+      width: 100%
       margin-bottom: 15px
     &-call
       &_text
@@ -113,6 +124,64 @@
     margin-bottom: 22px
     padding: 15px 0 15px 25px
     border-radius: 7px
+@media (max-width: 470px)
+  .container
+    width: 340px
+  .header
+    height: 50px
+    &-container
+      padding: 2px 0
+    img 
+      height: 45px
+    &-text 
+      &__contacts
+        margin-right: 10px
+        &_geo
+          font-size: 9px
+          margin-bottom: 0
+        &_tel
+          font-size: 10px
+  .main
+    &-text
+      width: 100%
+      &__title
+        font-size: 20px
+      &__add
+        font-size: 15px
+    &-advantages
+      &__text
+      font-size: 15px
+  .form
+    &-input_name
+      margin-right: 0
+    &-button 
+      margin-bottom: 10px
+      font-size: 15px
+      padding: 18px 24px
+    &-call 
+      flex-direction: column
+      text-align: center
+      &_text
+        margin: auto
+        margin-bottom: 2px
+        width: 250px
+        font-size: 18px
+        line-height: 20px
+      &_phone
+        &-text
+          margin: auto
+          width: 200px
+          font-size: 15px
+          line-height: 20px
+        &-number
+          font-size: 16px
+        &:before
+          display: none
+  .input
+    width: 338px
+    padding: 17px 0
+    &::-webkit-input-placeholder
+      text-align: center
 @media (max-width: 320px)
   .container
     width: 290px
@@ -126,7 +195,7 @@
       &__contacts
         margin-right: 10px
         &_geo
-          font-size: 9px
+          font-size: 10px
           margin-bottom: 0
         &_tel
           font-size: 10px
