--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,10 +1,14 @@
+@media (max-width: 1450px)
+  .main
+    img
+      transform: scale(1.1)
 @media (max-width: 1200px)
   .container
     width: 970px
   .main
     img
       transform-origin: top left
-      transform: scale(1.1)
+      transform: scale(1)
       z-index: 2
       position: relative
   .feedback
