--- a/css/style.css
+++ b/css/style.css
@@ -633,6 +633,8 @@ template {
 }
 
 .modal {
+  opacity: 0;
+  pointer-events: none;
   position: fixed;
   top: 0;
   left: 0;
@@ -738,6 +740,7 @@ template {
 }
 
 .modal__block-feedback {
+  position: relative;
   width: 570px;
   text-align: center;
   background-color: #ffffff;
@@ -785,6 +788,18 @@ template {
   line-height: 24px;
   color: #333333;
   text-decoration: none;
+}
+
+.modal__block-close {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  cursor: pointer;
+}
+
+.open {
+  opacity: 1;
+  pointer-events: inherit;
 }
 
 *, *:after, *:before {
@@ -934,14 +949,14 @@ h1 {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    height: 1000px;
+    height: 100%;
   }
   .modal__block-container {
     padding: 50px 0 50px 0;
     width: 350px;
   }
   .modal__block-info {
-    width: 296px;
+    width: 420px;
   }
   .modal__block-info_section-text {
     margin-left: 27px;
@@ -966,7 +981,10 @@ h1 {
     line-height: 22px;
   }
   .modal__block-feedback {
-    width: 266px;
+    width: 420px;
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
   }
   .modal__block-feedback_title {
     margin-bottom: 20px;
@@ -975,6 +993,9 @@ h1 {
   .modal__block-feedback_input {
     width: 340px;
     padding: 22px;
+  }
+  .modal__block-feedback_input::-webkit-input-placeholder {
+    text-align: center;
   }
   .modal__block-feedback_button {
     margin-top: 0;
@@ -1033,6 +1054,10 @@ h1 {
     padding: 20px 0 20px 27px;
     border-radius: 10px;
     border: 1px solid #dddddd;
+  }
+  .modal__block-feedback_input {
+    width: 340px;
+    padding: 22px;
   }
 }
 
@@ -1113,6 +1138,16 @@ h1 {
     padding: 15px 0 15px 25px;
     border-radius: 7px;
   }
+  .modal__block-feedback_input {
+    width: 340px;
+    padding: 22px;
+    margin-bottom: 15px;
+  }
+  .modal__block-feedback_button {
+    margin-top: 0;
+    width: 340px;
+    padding: 22px;
+  }
 }
 
 @media (max-width: 470px) {
@@ -1190,6 +1225,90 @@ h1 {
   }
   .input::-webkit-input-placeholder {
     text-align: center;
+  }
+  .modal__block-feedback_input {
+    width: 340px;
+    padding: 22px;
+    margin-bottom: 15px;
+  }
+}
+
+@media (max-width: 450px) {
+  .modal__block {
+    overflow: auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: 100%;
+  }
+  .modal__block-container {
+    padding: 10px 0 10px 0;
+    width: 260px;
+  }
+  .modal__block-info {
+    padding-top: 10px;
+    width: 290px;
+  }
+  .modal__block-info_section {
+    height: 60px;
+  }
+  .modal__block-info_section-text {
+    margin-left: 20px;
+  }
+  .modal__block-info_section-text_title {
+    height: 20px;
+    font-size: 14px;
+  }
+  .modal__block-info_section-text_prices {
+    margin-top: 6px;
+    font-size: 14px;
+  }
+  .modal__block-info_section-img {
+    max-height: 60px;
+  }
+  .modal__block-info_description {
+    margin-top: 32px;
+  }
+  .modal__block-info_description-list {
+    margin-top: 18px;
+    font-size: 13px;
+    line-height: 22px;
+  }
+  .modal__block-feedback {
+    width: 290px;
+  }
+  .modal__block-feedback_title {
+    width: 100%;
+    margin-bottom: 10px;
+    font-size: 15px;
+    line-height: 28px;
+  }
+  .modal__block-feedback_subtitle {
+    margin: auto;
+    margin-bottom: 20px;
+    width: 200px;
+    font-size: 14px;
+    line-height: 20px;
+  }
+  .modal__block-feedback_input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 8px;
+  }
+  .modal__block-feedback_button {
+    margin-top: 0;
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+  }
+  .modal__block-feedback_call-text {
+    margin-top: 15px;
+    margin-bottom: 0px;
+    font-size: 14px;
+  }
+  .modal__block-feedback_call-tel {
+    font-size: 18px;
   }
 }
 
@@ -1305,6 +1424,17 @@ h1 {
   }
   .input::-webkit-input-placeholder {
     text-align: center;
+  }
+  .modal__block-feedback_input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 8px;
+  }
+  .modal__block-feedback_button {
+    margin-top: 0;
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
   }
 }
 /*# sourceMappingURL=style.css.map */
