--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -85,12 +85,12 @@
     &__block
       overflow: auto
       flex-direction: column
-      height: 1000px
+      height: 100%
       &-container
         padding: 50px 0 50px 0
         width: 350px
       &-info
-        width: 296px
+        width: 420px
         &_section
           &-text
             margin-left: 27px
@@ -109,13 +109,16 @@
             font-size: 13px
             line-height: 22px
       &-feedback
-        width: 266px
+        width: 420px
+        order: -1
         &_title
           margin-bottom: 20px
           line-height: 28px
         &_input
           width: 340px
           padding: 22px
+          &::-webkit-input-placeholder
+            text-align: center
         &_button
           margin-top: 0
           width: 340px
@@ -158,6 +161,12 @@
     padding: 20px 0 20px 27px
     border-radius: 10px
     border: 1px solid #dddddd
+  .modal
+    &__block
+      &-feedback
+        &_input
+          width: 340px
+          padding: 22px
 @media (max-width: 576px)
   .container
     width: 470px
@@ -222,6 +231,17 @@
     margin-bottom: 22px
     padding: 15px 0 15px 25px
     border-radius: 7px
+  .modal
+    &__block
+      &-feedback
+        &_input
+          width: 340px
+          padding: 22px
+          margin-bottom: 15px
+        &_button
+          margin-top: 0
+          width: 340px
+          padding: 22px
 @media (max-width: 470px)
   .container
     width: 340px
@@ -280,6 +300,71 @@
     padding: 17px 0
     &::-webkit-input-placeholder
       text-align: center
+  .modal
+    &__block
+      &-feedback
+        &_input
+          width: 340px
+          padding: 22px
+          margin-bottom: 15px
+@media (max-width: 450px)
+  .modal
+    &__block
+      overflow: auto
+      flex-direction: column
+      height: 100%
+      &-container
+        padding: 10px 0 10px 0
+        width: 260px
+      &-info
+        padding-top: 10px
+        width: 290px
+        &_section
+          height: 60px
+          &-text
+            margin-left: 20px
+            &_title
+              height: 20px
+              font-size: 14px
+            &_prices
+              margin-top: 6px
+              font-size: 14px
+          &-img
+            max-height: 60px
+        &_description
+          margin-top: 32px
+          &-list
+            margin-top: 18px
+            font-size: 13px
+            line-height: 22px
+      &-feedback
+        width: 290px
+        &_title
+          width: 100%
+          margin-bottom: 10px
+          font-size: 15px
+          line-height: 28px
+        &_subtitle
+          margin: auto
+          margin-bottom: 20px
+          width: 200px
+          font-size: 14px
+          line-height: 20px
+        &_input
+          width: 100%
+          padding: 10px
+          margin-bottom: 8px
+        &_button
+          margin-top: 0
+          width: 100%
+          padding: 10px
+          border-radius: 5px
+        &_call-text
+          margin-top: 15px
+          margin-bottom: 0px
+          font-size: 14px
+        &_call-tel
+          font-size: 18px
 @media (max-width: 320px)
   .container
     width: 290px
@@ -366,3 +451,15 @@
     border-radius: 7px
     &::-webkit-input-placeholder
       text-align: center
+  .modal
+    &__block
+      &-feedback       
+        &_input
+          width: 100%
+          padding: 10px
+          margin-bottom: 8px
+        &_button
+          margin-top: 0
+          width: 100%
+          padding: 10px
+          border-radius: 5px
