--- a/sass/_modal.sass
+++ b/sass/_modal.sass
@@ -1,4 +1,6 @@
 .modal
+  opacity: 0
+  pointer-events: none
   position: fixed
   top: 0
   left: 0
@@ -7,7 +9,7 @@
   width: 100%
   background-color: rgba(#000, 0.52)
   z-index: 3
-  &__block
+  &__block 
     display: flex
     margin: auto
     height: 674px
@@ -66,6 +68,7 @@
               border-radius: 4px
               background-color: $primary-color           
     &-feedback
+      position: relative
       width: 570px
       text-align: center
       background-color: #ffffff
@@ -101,3 +104,11 @@
         line-height: 24px
         color: $font-color
         text-decoration: none
+    &-close
+      position: absolute
+      right: 5px
+      top: 5px
+      cursor: pointer 
+.open
+  opacity: 1
+  pointer-events: inherit
