--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -316,6 +316,8 @@
       &-container
         padding: 10px 0 10px 0
         width: 260px
+      &-close
+        font-size: 12px
       &-info
         padding-top: 10px
         width: 290px
@@ -333,10 +335,15 @@
             max-height: 60px
         &_description
           margin-top: 32px
+          text-align: justify
+          &-title 
+            text-align: center
           &-list
             margin-top: 18px
             font-size: 13px
             line-height: 22px
+            li 
+              padding-left: 17px
       &-feedback
         width: 290px
         &_title
@@ -461,5 +468,6 @@
         &_button
           margin-top: 0
           width: 100%
+          font-size: 16px
           padding: 10px
           border-radius: 5px
