--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -231,6 +231,8 @@
     margin-bottom: 22px
     padding: 15px 0 15px 25px
     border-radius: 7px
+  .portfolio
+    padding: 50px 0
   .modal
     &__block
       &-feedback
@@ -242,6 +244,12 @@
           margin-top: 0
           width: 340px
           padding: 22px
+  .owl-carousel
+    margin: auto
+    margin-top: 50px
+    width: 95%
+  .nav-btn
+    display: none
 @media (max-width: 470px)
   .container
     width: 340px
@@ -307,6 +315,14 @@
           width: 340px
           padding: 22px
           margin-bottom: 15px
+  .portfolio
+    padding: 30px 0
+  .owl-carousel
+    margin-top: 30px
+  .middle
+    &-title
+      font-size: 22px
+      line-height: 25px
 @media (max-width: 450px)
   .modal
     &__block
