--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -80,6 +80,16 @@
           margin-top: 25px
         &_call-tel
           font-size: 22px
+  .portfolio
+    padding: 80px 0
+  .owl-carousel
+    margin-top: 70px
+  .middle
+    &-title
+      text-align: center
+      font-size: 27px
+      +bold
+      line-height: 45px
 @media (max-width: 780px)
   .modal
     &__block
@@ -127,6 +137,10 @@
           margin-top: 25px
         &_call-tel
           font-size: 22px
+  .portfolio
+    padding: 60px 0
+  .owl-carousel
+    margin-top: 50px
 @media (max-width: 768px)
   .header
     margin: auto
@@ -487,3 +501,7 @@
           font-size: 16px
           padding: 10px
           border-radius: 5px
+  .middle
+    &-title
+      font-size: 19px
+      line-height: 25px
