footer-feedaback ready

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,6 +8,7 @@
 @import "feedback"
 @import "modal"
 @import "portfolio"
+@import "footer-feedback"
 
 *, *:after, *:before
   box-sizing: border-box
