--- a/css/style.css
+++ b/css/style.css
@@ -843,6 +843,168 @@ template {
   background: url("../img/portfolio/right-arrow_.png") no-repeat center 100%;
 }
 
+.footer-feedback {
+  background: url("../img/footer-feedback/bg-footer_feedback.png") no-repeat center left 100%;
+  background-size: contain;
+  position: relative;
+  z-index: 1;
+  height: 660px;
+}
+
+.footer-feedback:before {
+  content: '';
+  left: 0;
+  top: 0;
+  width: 56%;
+  height: 100%;
+  background-color: #ffd200;
+  position: absolute;
+  z-index: -1;
+}
+
+.footer-feedback__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.footer-feedback__info {
+  padding: 98px 0 109px 0;
+  -ms-flex-preferred-size: 56%;
+      flex-basis: 56%;
+}
+
+.footer-feedback__info-title {
+  margin-bottom: 30px;
+  width: 516px;
+  font-size: 22px;
+  line-height: 33px;
+  font-family: "Museo Sans Bold", sans-serif;
+}
+
+.footer-feedback__info-subtitle {
+  margin-bottom: 89px;
+  font-size: 16px;
+  line-height: 45px;
+}
+
+.footer-feedback__info-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 449px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-size: 18px;
+  font-family: "Museo Sans Medium", sans-serif;
+}
+
+.footer-feedback__info-list li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  margin-bottom: 41px;
+  padding-left: 70px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  list-style: none;
+}
+
+.footer-feedback__info-list li:nth-child(2) {
+  margin-bottom: 41px;
+}
+
+.footer-feedback__info-list li:before {
+  display: block;
+  padding-top: 5px;
+  padding-left: 4px;
+  position: absolute;
+  content: '';
+  left: 0;
+  width: 35px;
+  height: 35px;
+  text-align: center;
+  border: 2px solid #000000;
+  border-radius: 50%;
+}
+
+.footer-feedback__info-list #first:before {
+  content: '1.';
+}
+
+.footer-feedback__info-list #second:before {
+  content: '2.';
+}
+
+.footer-feedback__info-list #third:before {
+  content: '3.';
+  -webkit-transform: translateY(-5px);
+          transform: translateY(-5px);
+}
+
+.footer-feedback__info-list #fourth:before {
+  content: '4.';
+}
+
+.footer-feedback__block {
+  position: relative;
+  padding-top: 95px;
+  -ms-flex-preferred-size: 44%;
+      flex-basis: 44%;
+}
+
+.footer-feedback__block-form {
+  position: absolute;
+  right: 0;
+  text-align: center;
+}
+
+.footer-feedback__block-form_title {
+  margin: auto;
+  margin-bottom: 37px;
+  width: 338px;
+  font-size: 22px;
+  font-family: "Museo Sans Bold", sans-serif;
+  line-height: 33px;
+}
+
+.footer-feedback__block-form_subtitle {
+  margin-bottom: 41px;
+  font-size: 16px;
+  line-height: 35px;
+}
+
+.footer-feedback__block-form_inputs {
+  margin: auto;
+  margin-bottom: 32px;
+  width: 370px;
+}
+
+.footer-feedback__block-form_input {
+  width: 100%;
+  margin-bottom: 0;
+}
+
+.footer-feedback__block-form_input:nth-child(1) {
+  margin-bottom: 16px;
+}
+
+.footer-feedback__block-form_button {
+  margin-bottom: 29px;
+  padding: 25px 30px;
+  width: 100%;
+  font-size: 16px;
+}
+
+.footer-feedback__block-form_description {
+  font-size: 15px;
+  line-height: 24px;
+}
+
 *, *:after, *:before {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -911,6 +1073,83 @@ h1 {
   }
   .modal__block-feedback {
     width: 470px;
+  }
+}
+
+@media (max-width: 1100px) {
+  .main img {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@media (max-width: 1000px) {
+  .footer-feedback {
+    background: url("../img/footer-feedback/bg-footer_feedback.png") no-repeat center 100%;
+    background-size: cover;
+    position: relative;
+    z-index: 1;
+    height: 100%;
+  }
+  .footer-feedback:before {
+    content: '';
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 48%;
+    background-color: #ffd200;
+    position: absolute;
+    z-index: -1;
+  }
+  .footer-feedback__wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: 100%;
+  }
+  .footer-feedback__info {
+    text-align: center;
+    margin: auto;
+    padding: 45px 0 0 0;
+  }
+  .footer-feedback__info-title {
+    margin-bottom: 20px;
+  }
+  .footer-feedback__info-subtitle {
+    margin-bottom: 50px;
+  }
+  .footer-feedback__info-list {
+    margin: auto;
+    margin-bottom: 30px;
+    text-align: left;
+  }
+  .footer-feedback__info-list li {
+    margin-bottom: 41px;
+    padding-left: 55px;
+  }
+  .footer-feedback__block {
+    width: 516px;
+    margin: auto;
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+  .footer-feedback__block-form {
+    position: relative;
+  }
+  .footer-feedback__block-form_title {
+    width: 100%;
+  }
+  .footer-feedback__block-form_inputs {
+    margin: auto;
+    margin-bottom: 32px;
+    width: 95%;
+  }
+  .footer-feedback__block-form_button {
+    width: 95%;
   }
 }
 
@@ -1073,7 +1312,7 @@ h1 {
     font-size: 22px;
   }
   .portfolio {
-    padding: 60px 0;
+    padding: 60px 0 85px 0;
   }
   .owl-carousel {
     margin-top: 50px;
@@ -1128,6 +1367,15 @@ h1 {
   .modal__block-feedback_input {
     width: 340px;
     padding: 22px;
+  }
+  .footer-feedback__block-form_inputs {
+    margin: auto;
+    margin-bottom: 32px;
+    width: 95%;
+  }
+  .footer-feedback__block-form_input {
+    width: 100%;
+    margin-bottom: 0;
   }
 }
 
@@ -1209,7 +1457,7 @@ h1 {
     border-radius: 7px;
   }
   .portfolio {
-    padding: 50px 0;
+    padding: 20px 0;
   }
   .modal__block-feedback_input {
     width: 340px;
@@ -1229,11 +1477,78 @@ h1 {
   .nav-btn {
     display: none;
   }
+  .footer-feedback:before {
+    height: 47%;
+  }
+  .footer-feedback__info {
+    width: 95%;
+  }
+  .footer-feedback__info-title {
+    margin-bottom: 15px;
+    width: 100%;
+    font-size: 19px;
+    line-height: 28px;
+  }
+  .footer-feedback__info-subtitle {
+    font-size: 15px;
+    margin-bottom: 20px;
+  }
+  .footer-feedback__info-list {
+    margin: auto;
+    width: 100%;
+    font-size: 15px;
+  }
+  .footer-feedback__info li {
+    margin-bottom: 30px;
+  }
+  .footer-feedback__info li:nth-child(2) {
+    margin-bottom: 30px;
+  }
+  .footer-feedback__info li:before {
+    padding-top: 6px;
+    padding-left: 3px;
+    width: 30px;
+    height: 30px;
+    font-size: 14px;
+  }
+  .footer-feedback__block {
+    width: 95%;
+  }
+  .footer-feedback__block-form_title {
+    margin-bottom: 20px;
+  }
+  .footer-feedback__block-form_subtitle {
+    margin-bottom: 20px;
+  }
+  .footer-feedback__block-form_inputs {
+    margin: auto;
+    margin-bottom: 15px;
+    width: 100%;
+  }
+  .footer-feedback__block-form_input {
+    width: 100%;
+    margin-bottom: 0;
+    padding: 16px 0;
+  }
+  .footer-feedback__block-form_input::-webkit-input-placeholder {
+    text-align: center;
+  }
+  .footer-feedback__block-form_button {
+    width: 100%;
+    padding: 16px 0;
+    margin: auto;
+  }
+}
+
+@media (max-width: 540px) {
+  .footer-feedback:before {
+    height: 47%;
+  }
 }
 
 @media (max-width: 470px) {
   .container {
-    width: 340px;
+    width: 320px;
   }
   .header {
     height: 50px;
@@ -1252,7 +1567,7 @@ h1 {
     margin-bottom: 0;
   }
   .header-text__contacts_tel {
-    font-size: 10px;
+    font-size: 9px;
   }
   .main-text {
     width: 100%;
@@ -1271,7 +1586,7 @@ h1 {
   }
   .form-button {
     margin-bottom: 10px;
-    font-size: 15px;
+    font-size: 14px;
     padding: 18px 24px;
   }
   .form-call {
@@ -1301,14 +1616,14 @@ h1 {
     display: none;
   }
   .input {
-    width: 338px;
+    width: 320px;
     padding: 17px 0;
   }
   .input::-webkit-input-placeholder {
     text-align: center;
   }
   .modal__block-feedback_input {
-    width: 340px;
+    width: 320px;
     padding: 22px;
     margin-bottom: 15px;
   }
@@ -1321,6 +1636,28 @@ h1 {
   .middle-title {
     font-size: 22px;
     line-height: 25px;
+  }
+  .footer-feedback:before {
+    height: 51%;
+  }
+  .footer-feedback__block-form_inputs {
+    margin: auto;
+    margin-bottom: 15px;
+    width: 100%;
+  }
+  .footer-feedback__block-form_input {
+    width: 100%;
+    margin-bottom: 0;
+    padding: 16px 0;
+  }
+  .footer-feedback__block-form_input::-webkit-input-placeholder {
+    text-align: center;
+  }
+  .footer-feedback__block-form_button {
+    width: 100%;
+    padding: 16px 0;
+    margin: auto;
+    margin-bottom: 15px;
   }
 }
 
@@ -1410,6 +1747,9 @@ h1 {
   }
   .modal__block-feedback_call-tel {
     font-size: 18px;
+  }
+  .footer-feedback__block {
+    width: 100%;
   }
 }
 
@@ -1541,6 +1881,34 @@ h1 {
   .middle-title {
     font-size: 19px;
     line-height: 25px;
+  }
+  .footer-feedback:before {
+    height: 58%;
+  }
+  .footer-feedback__info-title {
+    font-size: 15px;
+    line-height: 25px;
+  }
+  .footer-feedback__info-subtitle {
+    font-size: 14px;
+  }
+  .footer-feedback__block {
+    padding-bottom: 0;
+  }
+  .footer-feedback__block-form_title {
+    font-size: 15px;
+    line-height: 25px;
+    margin-bottom: 10px;
+  }
+  .footer-feedback__block-form_subtitle {
+    font-size: 14px;
+    margin-bottom: 10px;
+  }
+  .footer-feedback__block-form_button {
+    font-size: 16px;
+  }
+  .footer-feedback__block-form_description {
+    font-size: 14px;
   }
 }
 /*# sourceMappingURL=style.css.map */
