--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -23,6 +23,60 @@
         width: 500px
       &-feedback
         width: 470px
+@media (max-width: 1100px)
+  .main
+    img
+      transform: scale(1)
+@media (max-width: 1000px)
+  .footer-feedback
+    background: url("../img/footer-feedback/bg-footer_feedback.png") no-repeat center 100%
+    background-size: cover
+    position: relative
+    z-index: 1
+    height: 100%
+    &:before
+      content: ''
+      left: 0
+      top: 0
+      width: 100%
+      height: 48%
+      background-color: $primary-color
+      position: absolute
+      z-index: -1
+    &__wrap
+      display: flex
+      flex-direction: column
+      height: 100%
+    &__info
+      text-align: center
+      margin: auto
+      padding: 45px 0 0 0
+      &-title
+        margin-bottom: 20px
+      &-subtitle
+        margin-bottom: 50px
+      &-list
+        margin: auto
+        margin-bottom: 30px
+        text-align: left
+        li 
+          margin-bottom: 41px
+          padding-left: 55px
+    &__block
+      width: 516px
+      margin: auto
+      padding-top: 40px
+      padding-bottom: 40px
+      &-form
+        position: relative
+        &_title
+          width: 100%
+        &_inputs
+          margin: auto
+          margin-bottom: 32px
+          width: 95%
+        &_button
+          width: 95%
 @media (max-width: 992px)
   .container
     width: 730px
@@ -138,7 +192,7 @@
         &_call-tel
           font-size: 22px
   .portfolio
-    padding: 60px 0
+    padding: 60px 0 85px 0
   .owl-carousel
     margin-top: 50px
 @media (max-width: 768px)
@@ -181,6 +235,16 @@
         &_input
           width: 340px
           padding: 22px
+  .footer-feedback
+    &__block
+      &-form
+        &_inputs
+          margin: auto
+          margin-bottom: 32px
+          width: 95%
+        &_input
+          width: 100%
+          margin-bottom: 0      
 @media (max-width: 576px)
   .container
     width: 470px
@@ -246,7 +310,7 @@
     padding: 15px 0 15px 25px
     border-radius: 7px
   .portfolio
-    padding: 50px 0
+    padding: 20px 0
   .modal
     &__block
       &-feedback
@@ -264,9 +328,61 @@
     width: 95%
   .nav-btn
     display: none
+  .footer-feedback
+    &:before
+      height: 47%
+    &__info
+      width: 95%
+      &-title 
+        margin-bottom: 15px
+        width: 100%
+        font-size: 19px
+        line-height: 28px
+      &-subtitle
+        font-size: 15px
+        margin-bottom: 20px
+      &-list
+        margin: auto
+        width: 100%
+        font-size: 15px
+      li
+        margin-bottom: 30px
+        &:nth-child(2)
+          margin-bottom: 30px
+        &:before
+          padding-top: 6px
+          padding-left: 3px
+          width: 30px
+          height: 30px
+          font-size: 14px
+    &__block
+      width: 95%
+      &-form
+        &_title
+          margin-bottom: 20px
+        &_subtitle
+          margin-bottom: 20px
+        &_inputs
+          margin: auto
+          margin-bottom: 15px
+          width: 100%
+        &_input
+          width: 100%
+          margin-bottom: 0 
+          padding: 16px 0
+          &::-webkit-input-placeholder
+            text-align: center
+        &_button
+          width: 100%
+          padding: 16px 0
+          margin: auto
+@media (max-width: 540px)
+   .footer-feedback
+    &:before
+      height: 47%
 @media (max-width: 470px)
   .container
-    width: 340px
+    width: 320px
   .header
     height: 50px
     &-container
@@ -280,7 +396,7 @@
           font-size: 9px
           margin-bottom: 0
         &_tel
-          font-size: 10px
+          font-size: 9px
   .main
     &-text
       width: 100%
@@ -296,7 +412,7 @@
       margin-right: 0
     &-button 
       margin-bottom: 10px
-      font-size: 15px
+      font-size: 14px
       padding: 18px 24px
     &-call 
       flex-direction: column
@@ -318,7 +434,7 @@
         &:before
           display: none
   .input
-    width: 338px
+    width: 320px
     padding: 17px 0
     &::-webkit-input-placeholder
       text-align: center
@@ -326,7 +442,7 @@
     &__block
       &-feedback
         &_input
-          width: 340px
+          width: 320px
           padding: 22px
           margin-bottom: 15px
   .portfolio
@@ -337,6 +453,26 @@
     &-title
       font-size: 22px
       line-height: 25px
+  .footer-feedback
+    &:before
+      height: 51%
+    &__block
+      &-form
+        &_inputs
+          margin: auto
+          margin-bottom: 15px
+          width: 100%
+        &_input
+          width: 100%
+          margin-bottom: 0 
+          padding: 16px 0
+          &::-webkit-input-placeholder
+            text-align: center
+        &_button
+          width: 100%
+          padding: 16px 0
+          margin: auto
+          margin-bottom: 15px
 @media (max-width: 450px)
   .modal
     &__block
@@ -402,6 +538,9 @@
           font-size: 14px
         &_call-tel
           font-size: 18px
+  .footer-feedback
+    &__block
+      width: 100%
 @media (max-width: 320px)
   .container
     width: 290px
@@ -505,3 +644,28 @@
     &-title
       font-size: 19px
       line-height: 25px
+  .footer-feedback
+    &:before
+      height: 58%
+    &__info
+      &-title 
+        font-size: 15px
+        line-height: 25px
+      &-subtitle
+        font-size: 14px
+    &__block
+      padding-bottom: 0
+      &-form
+        &_title
+          font-size: 15px
+          line-height: 25px
+          margin-bottom: 10px
+        &_subtitle
+          font-size: 14px
+          margin-bottom: 10px
+        &_button
+          font-size: 16px
+        &_description
+          font-size: 14px
+
+        
