--- a/sass/_footer-feedback.sass
+++ b/sass/_footer-feedback.sass
@@ -16,7 +16,7 @@
   &__wrap
     display: flex
   &__info
-    padding: 98px 0 109px 0
+    padding: 98px 0 0 0
     flex-basis: 56%
     &-title
       margin-bottom: 30px
